# CottegeMonitoring

./: .gitignore  README.md
server/: .dockerignore  .env.test.example  README.md  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 001_initial_schema.py  002_events_id_default.py  003_add_devices.py  004_api_keys.py  005_operation_traces.py  006_events_retention_compression.py  007_events_dedup_unique.py
server/deploy/: Dockerfile  IMAGE_PIN.yaml  cottage-monitoring-dev.service  cottage-monitoring.dev.env  cottage-monitoring.prod.env  cottage-monitoring.service  docker-compose.yml  elion-bind-docker0.sh  init-db.sh  telegram.env.example  wait_http_health.sh
server/deploy/grafana/: README.md  deploy.sh  deploy_alerts.sh  generate_dashboards.py
server/deploy/nginx/: cottage-monitoring.conf
server/scripts/: check_mosquitto_cert.sh  check_mosquitto_cert_alert.sh  check_recent_data.py  cleanup_dev_db.py  cleanup_mqtt_topics.py  create_api_key.py  run-local-prod.sh  trace_report.py  tunnel-start.sh  tunnel-stop.sh
server/scripts/bench_mcp_models/: models.json  run_bench.py  scenarios.json  system_prompt.txt
server/src/cottage_monitoring/: config.py  deps.py  logging_config.py  main.py  metrics.py
server/tests/: conftest.py
server/tests/contract/: test_api_contracts.py
server/tests/integration/: test_api_endpoints.py  test_command_dry_run.py  test_commands.py  test_edge_cases.py  test_house_lifecycle.py  test_ingestor_events.py  test_ingestor_meta.py  test_ingestor_state.py  test_ingestor_status.py  test_lifespan.py  test_rpc.py  (+6 more)
(+135 files in other folders)
